[package]
name = "tony_montona"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tonlib = "0.15"
tonlib-sys = "=2024.3.7"
async-trait = "0.1"
base64 = "0.22"
base64-serde = "0.7"
bitstream-io = "2.2"
