[package]
name = "tony_montona"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonlib = "0.15"
tonlib-sys = "2024.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.21"
